--- a/modele_NCF.ipynb
+++ b/modele_NCF.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -366,11 +367,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m93s\u001b[0m 83ms/step - loss: 0.9992\n",
+      "Epoch 2/5\n",
+      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m88s\u001b[0m 81ms/step - loss: 1.0011\n",
+      "Epoch 3/5\n",
+      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m87s\u001b[0m 80ms/step - loss: 0.9890\n",
+      "Epoch 4/5\n",
+      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m89s\u001b[0m 83ms/step - loss: 1.0063\n",
+      "Epoch 5/5\n",
+      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m92s\u001b[0m 85ms/step - loss: 0.9964\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x15a61e0cb10>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#==========implementer le modele NCF=========================\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "#==========implementer le modele NCF=========================\n",
+    "\n",
+    "# donne entrainement et test\n",
+    "x = data[['userId', 'movieId']]\n",
+    "y = data['rating']\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "#=================construire le modele=========================\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Input, Embedding, Flatten, Concatenate, Dense # type: ignore\n",
+    "from tensorflow.keras.models import Model # type: ignore\n",
+    "\n",
+    "#couche d'entree\n",
+    "user_input = Input(shape=(1,))\n",
+    "movie_input = Input(shape=(1,))\n",
+    "\n",
+    "#embedding \n",
+    "user_embedding = Embedding(len(user_id_mapping), 16)(user_input)\n",
+    "movie_embedding = Embedding(len(movie_id_mapping), 16)(movie_input)\n",
+    "\n",
+    "#flatten des embeddings(applatissement)\n",
+    "user_flatten = Flatten()(user_embedding)\n",
+    "movie_flatten = Flatten()(movie_embedding)\n",
+    "\n",
+    "#concatenation\n",
+    "conc = Concatenate()([user_flatten, movie_flatten])\n",
+    "\n",
+    "#couche fully connected\n",
+    "dense = Dense(64, activation='relu')(conc)\n",
+    "dense = Dense(32, activation='relu')(dense)\n",
+    "sortie = Dense(1)(dense)\n",
+    "\n",
+    "\n",
+    "#model\n",
+    "model = Model(inputs=[user_input, movie_input], outputs=sortie)\n",
+    "\n",
+    "#compiler le modele\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "\n",
+    "#entrainer le modele\n",
+    "model.fit([x_train['userId'], x_train['movieId']], y_train, batch_size=64, epochs=5, verbose=1)\n"
    ]
   }
  ],
