Track large CSV files with Git LFS

--- a/modele_NCF.ipynb
+++ b/modele_NCF.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -250,18 +250,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>Adventure Animation Children Comedy Fantasy</td>\n",
-       "      <td>114709</td>\n",
-       "      <td>862.0</td>\n",
-       "      <td>animation friendship toys animation disney pix...</td>\n",
-       "      <td>1.135783</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.199106</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
@@ -310,41 +298,46 @@
        "      <td>4</td>\n",
        "      <td>0.199106</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Sabrina (1995)</td>\n",
+       "      <td>Comedy Romance</td>\n",
+       "      <td>114319</td>\n",
+       "      <td>11860.0</td>\n",
+       "      <td>based on a play harrison ford paris romance si...</td>\n",
+       "      <td>0.463777</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.199106</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movieId                               title  \\\n",
-       "0        0                    Toy Story (1995)   \n",
-       "1        1                      Jumanji (1995)   \n",
-       "2        2             Grumpier Old Men (1995)   \n",
-       "3        3            Waiting to Exhale (1995)   \n",
-       "4        4  Father of the Bride Part II (1995)   \n",
+       "   movieId                               title                      genres  \\\n",
+       "1        1                      Jumanji (1995)  Adventure Children Fantasy   \n",
+       "2        2             Grumpier Old Men (1995)              Comedy Romance   \n",
+       "3        3            Waiting to Exhale (1995)        Comedy Drama Romance   \n",
+       "4        4  Father of the Bride Part II (1995)                      Comedy   \n",
+       "6        6                      Sabrina (1995)              Comedy Romance   \n",
        "\n",
-       "                                        genres  imdbId   tmdbId  \\\n",
-       "0  Adventure Animation Children Comedy Fantasy  114709    862.0   \n",
-       "1                   Adventure Children Fantasy  113497   8844.0   \n",
-       "2                               Comedy Romance  113228  15602.0   \n",
-       "3                         Comedy Drama Romance  114885  31357.0   \n",
-       "4                                       Comedy  113041  11862.0   \n",
+       "   imdbId   tmdbId                                                tag  \\\n",
+       "1  113497   8844.0  animals based on a book fantasy magic board ga...   \n",
+       "2  113228  15602.0  sequel moldy old old age old men wedding old p...   \n",
+       "3  114885  31357.0  characters chick flick girl movie characters c...   \n",
+       "4  113041  11862.0  family pregnancy wedding 4th wall aging baby d...   \n",
+       "6  114319  11860.0  based on a play harrison ford paris romance si...   \n",
        "\n",
-       "                                                 tag    rating  userId  \\\n",
-       "0  animation friendship toys animation disney pix...  1.135783       0   \n",
-       "1  animals based on a book fantasy magic board ga...  0.342364       1   \n",
-       "2  sequel moldy old old age old men wedding old p...  0.204515       2   \n",
-       "3  characters chick flick girl movie characters c... -0.186019       3   \n",
-       "4  family pregnancy wedding 4th wall aging baby d...  0.082905       4   \n",
-       "\n",
-       "   popularity  \n",
-       "0    0.199106  \n",
-       "1    0.199106  \n",
-       "2    0.199106  \n",
-       "3    0.199106  \n",
-       "4    0.199106  "
+       "     rating  userId  popularity  \n",
+       "1  0.342364       1    0.199106  \n",
+       "2  0.204515       2    0.199106  \n",
+       "3 -0.186019       3    0.199106  \n",
+       "4  0.082905       4    0.199106  \n",
+       "6  0.463777       6    0.199106  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,87 +353,124 @@
     "\n",
     "#==Normaliser les colonnes rating et popularity =======================\n",
     "scaler = StandardScaler()\n",
-    "data[['rating', 'popularity']] = scaler.fit_transform(data[['rating', 'popularity']])\n",
+    "data['rating'] = scaler.fit_transform(data['rating'].values.reshape(-1, 1))\n",
     "\n",
+    "data = data[(data['rating'] >= -1) & (data['rating'] <= 1)] \n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m93s\u001b[0m 83ms/step - loss: 0.9992\n",
-      "Epoch 2/5\n",
-      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m88s\u001b[0m 81ms/step - loss: 1.0011\n",
-      "Epoch 3/5\n",
-      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m87s\u001b[0m 80ms/step - loss: 0.9890\n",
-      "Epoch 4/5\n",
-      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m89s\u001b[0m 83ms/step - loss: 1.0063\n",
-      "Epoch 5/5\n",
-      "\u001b[1m1081/1081\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m92s\u001b[0m 85ms/step - loss: 0.9964\n"
+      "Epoch 1/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 54ms/step - loss: 0.0648\n",
+      "Epoch 2/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 53ms/step - loss: 0.0640\n",
+      "Epoch 3/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 53ms/step - loss: 0.0629\n",
+      "Epoch 4/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 54ms/step - loss: 0.0594\n",
+      "Epoch 5/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 52ms/step - loss: 0.0438\n",
+      "Epoch 6/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 50ms/step - loss: 0.0282\n",
+      "Epoch 7/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m46s\u001b[0m 56ms/step - loss: 0.0189\n",
+      "Epoch 8/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m51s\u001b[0m 63ms/step - loss: 0.0132\n",
+      "Epoch 9/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 55ms/step - loss: 0.0101\n",
+      "Epoch 10/10\n",
+      "\u001b[1m809/809\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 56ms/step - loss: 0.0079\n",
+      "\u001b[1m405/405\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step\n",
+      "Loss sur les notes originales : 0.37637028712934417\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.layers import Input, Embedding, Flatten, Concatenate, Dense, Dropout # type: ignore\n",
+    "from tensorflow.keras.models import Model # type: ignore\n",
+    "from tensorflow.keras.optimizers import Adam # type: ignore\n",
+    "\n",
+    "# Normalisation des notes entre 0 et 1\n",
+    "scaler = MinMaxScaler()\n",
+    "data['rating'] = scaler.fit_transform(data['rating'].values.reshape(-1, 1))\n",
+    "\n",
+    "# Division des données\n",
+    "x = data[['userId', 'movieId']]\n",
+    "y = data['rating']\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Construction du modèle\n",
+    "user_input = Input(shape=(1,))\n",
+    "movie_input = Input(shape=(1,))\n",
+    "\n",
+    "user_embedding = Embedding(len(user_id_mapping), 32)(user_input)\n",
+    "movie_embedding = Embedding(len(movie_id_mapping), 32)(movie_input)\n",
+    "\n",
+    "user_flatten = Flatten()(user_embedding)\n",
+    "movie_flatten = Flatten()(movie_embedding)\n",
+    "\n",
+    "conc = Concatenate()([user_flatten, movie_flatten])\n",
+    "\n",
+    "dense = Dense(128, activation='relu')(conc)\n",
+    "dense = Dropout(0.5)(dense)\n",
+    "dense = Dense(64, activation='relu')(dense)\n",
+    "dense = Dropout(0.5)(dense)\n",
+    "dense = Dense(32, activation='relu')(dense)\n",
+    "sortie = Dense(1, activation='sigmoid')(dense)  \n",
+    "\n",
+    "model = Model(inputs=[user_input, movie_input], outputs=sortie)\n",
+    "model.compile(optimizer=Adam(learning_rate=0.0001), loss='mean_squared_error')\n",
+    "\n",
+    "# Entraînement du modèle\n",
+    "model.fit([x_train['userId'], x_train['movieId']], y_train, batch_size=64, epochs=10, verbose=1)\n",
+    "\n",
+    "# Prédiction et inversion de la normalisation\n",
+    "y_pred_normalized = model.predict([x_test['userId'], x_test['movieId']])\n",
+    "y_pred = scaler.inverse_transform(y_pred_normalized)\n",
+    "\n",
+    "# Calcul de la loss sur les notes originales\n",
+    "y_test_original = scaler.inverse_transform(y_test.values.reshape(-1, 1))\n",
+    "loss = mean_squared_error(y_test_original, y_pred)\n",
+    "print(\"Loss sur les notes originales :\", loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m541/541\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - loss: 1.1022\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x15a61e0cb10>"
+       "1.1147539615631104"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "#==========implementer le modele NCF=========================\n",
-    "\n",
-    "# donne entrainement et test\n",
-    "x = data[['userId', 'movieId']]\n",
-    "y = data['rating']\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "#=================construire le modele=========================\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Input, Embedding, Flatten, Concatenate, Dense # type: ignore\n",
-    "from tensorflow.keras.models import Model # type: ignore\n",
-    "\n",
-    "#couche d'entree\n",
-    "user_input = Input(shape=(1,))\n",
-    "movie_input = Input(shape=(1,))\n",
-    "\n",
-    "#embedding \n",
-    "user_embedding = Embedding(len(user_id_mapping), 16)(user_input)\n",
-    "movie_embedding = Embedding(len(movie_id_mapping), 16)(movie_input)\n",
-    "\n",
-    "#flatten des embeddings(applatissement)\n",
-    "user_flatten = Flatten()(user_embedding)\n",
-    "movie_flatten = Flatten()(movie_embedding)\n",
-    "\n",
-    "#concatenation\n",
-    "conc = Concatenate()([user_flatten, movie_flatten])\n",
-    "\n",
-    "#couche fully connected\n",
-    "dense = Dense(64, activation='relu')(conc)\n",
-    "dense = Dense(32, activation='relu')(dense)\n",
-    "sortie = Dense(1)(dense)\n",
-    "\n",
-    "\n",
-    "#model\n",
-    "model = Model(inputs=[user_input, movie_input], outputs=sortie)\n",
-    "\n",
-    "#compiler le modele\n",
-    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
-    "\n",
-    "#entrainer le modele\n",
-    "model.fit([x_train['userId'], x_train['movieId']], y_train, batch_size=64, epochs=5, verbose=1)\n"
+    "#evaluation du modele\n",
+    "model.evaluate([x_test['userId'], x_test['movieId']], y_test)\n"
    ]
   }
  ],
