--- a/modele_NCF.ipynb
+++ b/modele_NCF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "      <td>862.0</td>\n",
        "      <td>animation friendship toys animation Disney Pix...</td>\n",
        "      <td>3.893508</td>\n",
-       "      <td>55016</td>\n",
+       "      <td>80450</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -71,7 +71,7 @@
        "      <td>8844.0</td>\n",
        "      <td>animals based on a book fantasy magic board ga...</td>\n",
        "      <td>3.278179</td>\n",
-       "      <td>6130</td>\n",
+       "      <td>72515</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -83,7 +83,7 @@
        "      <td>15602.0</td>\n",
        "      <td>sequel moldy old old age old men wedding old p...</td>\n",
        "      <td>3.171271</td>\n",
-       "      <td>51696</td>\n",
+       "      <td>84638</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -95,7 +95,7 @@
        "      <td>31357.0</td>\n",
        "      <td>characters chick flick girl movie characters c...</td>\n",
        "      <td>2.868395</td>\n",
-       "      <td>58797</td>\n",
+       "      <td>18411</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -107,7 +107,7 @@
        "      <td>11862.0</td>\n",
        "      <td>family pregnancy wedding 4th wall aging baby d...</td>\n",
        "      <td>3.076957</td>\n",
-       "      <td>85288</td>\n",
+       "      <td>15657</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -130,11 +130,11 @@
        "4                                       Comedy  113041  11862.0   \n",
        "\n",
        "                                                 tag    rating  userId  \\\n",
-       "0  animation friendship toys animation Disney Pix...  3.893508   55016   \n",
-       "1  animals based on a book fantasy magic board ga...  3.278179    6130   \n",
-       "2  sequel moldy old old age old men wedding old p...  3.171271   51696   \n",
-       "3  characters chick flick girl movie characters c...  2.868395   58797   \n",
-       "4  family pregnancy wedding 4th wall aging baby d...  3.076957   85288   \n",
+       "0  animation friendship toys animation Disney Pix...  3.893508   80450   \n",
+       "1  animals based on a book fantasy magic board ga...  3.278179   72515   \n",
+       "2  sequel moldy old old age old men wedding old p...  3.171271   84638   \n",
+       "3  characters chick flick girl movie characters c...  2.868395   18411   \n",
+       "4  family pregnancy wedding 4th wall aging baby d...  3.076957   15657   \n",
        "\n",
        "   popularity  \n",
        "0           1  \n",
@@ -144,7 +144,7 @@
        "4           1  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "      <td>animals based on a book fantasy magic board ga...</td>\n",
        "      <td>0.342364</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.199106</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -272,7 +272,7 @@
        "      <td>sequel moldy old old age old men wedding old p...</td>\n",
        "      <td>0.204515</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.199106</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -284,7 +284,7 @@
        "      <td>characters chick flick girl movie characters c...</td>\n",
        "      <td>-0.186019</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.199106</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -296,7 +296,7 @@
        "      <td>family pregnancy wedding 4th wall aging baby d...</td>\n",
        "      <td>0.082905</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.199106</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -308,7 +308,7 @@
        "      <td>based on a play harrison ford paris romance si...</td>\n",
        "      <td>0.463777</td>\n",
        "      <td>6</td>\n",
-       "      <td>0.199106</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -330,14 +330,14 @@
        "6  114319  11860.0  based on a play harrison ford paris romance si...   \n",
        "\n",
        "     rating  userId  popularity  \n",
-       "1  0.342364       1    0.199106  \n",
-       "2  0.204515       2    0.199106  \n",
-       "3 -0.186019       3    0.199106  \n",
-       "4  0.082905       4    0.199106  \n",
-       "6  0.463777       6    0.199106  "
+       "1  0.342364       1           1  \n",
+       "2  0.204515       2           1  \n",
+       "3 -0.186019       3           1  \n",
+       "4  0.082905       4           1  \n",
+       "6  0.463777       6           1  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -369,34 +369,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 56ms/step - loss: 0.0660\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 54ms/step - loss: 0.0657\n",
       "Epoch 2/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 62ms/step - loss: 0.0641\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 53ms/step - loss: 0.0643\n",
       "Epoch 3/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 55ms/step - loss: 0.0635\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 58ms/step - loss: 0.0632\n",
       "Epoch 4/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 56ms/step - loss: 0.0595\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 48ms/step - loss: 0.0585\n",
       "Epoch 5/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 58ms/step - loss: 0.0423\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 46ms/step - loss: 0.0403\n",
       "Epoch 6/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 53ms/step - loss: 0.0266\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 51ms/step - loss: 0.0251\n",
       "Epoch 7/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 55ms/step - loss: 0.0178\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 51ms/step - loss: 0.0169\n",
       "Epoch 8/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 55ms/step - loss: 0.0132\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 53ms/step - loss: 0.0123\n",
       "Epoch 9/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 55ms/step - loss: 0.0101\n",
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 52ms/step - loss: 0.0094\n",
       "Epoch 10/10\n",
-      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 51ms/step - loss: 0.0077\n",
-      "\u001b[1m607/607\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2ms/step\n",
-      "Loss sur les notes originales : 0.0930402484465189\n"
+      "\u001b[1m708/708\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 52ms/step - loss: 0.0072\n",
+      "\u001b[1m607/607\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
+      "Loss sur les notes originales : 0.37955552479643356\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error # type: ignore\n",
+    "from sklearn.preprocessing import MinMaxScaler # type: ignore\n",
+    "from sklearn.model_selection import train_test_split # type: ignore\n",
     "from tensorflow.keras.layers import Input, Embedding, Flatten, Concatenate, Dense, Dropout # type: ignore\n",
     "from tensorflow.keras.models import Model , load_model  # type: ignore\n",
     "from tensorflow.keras.optimizers import Adam # type: ignore\n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -458,14 +458,11 @@
      ]
     }
    ],
-   "source": [
-    "#save the model\n",
-    "model.save('model_NCF.h5')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -479,43 +476,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m607/607\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - loss: 0.0932\n",
-      "\u001b[1m2021/2021\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step\n",
-      "Top 5 Movies: ['Come and See (Idi i smotri) (1985)' 'Beer League (2006)']\n",
-      "Top 5 Ratings: [0.9619372 0.958007  0.9559925 0.9559048 0.9548988]\n"
+      "\u001b[1m391/391\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
+      "Top 5 Movies (IDs): [64285 27716 34292  4585  6428]\n",
+      "Top 5 Ratings: [0.900386   0.88814247 0.88744164 0.8863874  0.8735525 ]\n",
+      "Top 5 Movies (Titles): ['Dream Team, The (1989)' 'Two Mules for Sister Sara (1970)'\n",
+      " 'Green Butchers, The (Grønne slagtere, De) (2003)' 'Hardware (1990)'\n",
+      " \"Wallace and Gromit in 'A Matter of Loaf and Death' (2008)\"]\n",
+      "(5,)\n"
      ]
     }
    ],
    "source": [
-    "#evaluons les performances du modele\n",
+    "import numpy as np # type: ignore\n",
     "from tensorflow.keras.models import load_model # type: ignore\n",
+    "from sklearn.preprocessing import MinMaxScaler # type: ignore\n",
+    "\n",
+    "# Charger le modèle\n",
     "model = load_model('model_NCF.h5')\n",
     "\n",
-    "accuracy = model.evaluate([x_test['userId'], x_test['movieId']], y_test)\n",
     "\n",
-    "score = model.evaluate([x_test['userId'], x_test['movieId']], y_test, verbose=0)\n",
+    "def top_5_recommandation(user, model, movie_ids, valid_movie_ids, scaler):\n",
+    "    # Filtrer les IDs pour qu'ils soient valides\n",
+    "    movie_ids = [movie for movie in movie_ids if movie in valid_movie_ids]  # Ne garder que les IDs valides\n",
     "\n",
-    "def top_5_recommandation(user, model, movies, scaler):\n",
-    "    user = np.array([user] * len(movies))  # creer un tableau de la taille de movie\n",
-    "    movie = np.array(movies) \n",
-    "    prediction = model.predict([user, movie])\n",
-    "    prediction = scaler.inverse_transform(prediction)  # inverser la normalisation\n",
-    "    sorted_indices = np.argsort(prediction.flatten())[::-1]\n",
+    "    # Prédictions\n",
+    "    user_array = np.array([user] * len(movie_ids))\n",
+    "    movie_array = np.array(movie_ids)\n",
+    "    predictions = model.predict([user_array, movie_array])\n",
+    "    predictions = scaler.inverse_transform(predictions)\n",
+    "\n",
+    "    # Trier les résultats\n",
+    "    sorted_indices = np.argsort(predictions.flatten())[::-1]\n",
     "    top_5 = sorted_indices[:5]\n",
-    "    top_5_movies = movies[top_5]\n",
-    "    top_5_ratings = prediction.flatten()[top_5]\n",
+    "    top_5_movies = movie_array[top_5]\n",
+    "    top_5_ratings = predictions.flatten()[top_5]\n",
+    "\n",
     "    return top_5_movies, top_5_ratings\n",
     "\n",
-    "user_id = 1  # ID de l'utilisateur pour lequel vous voulez des recommandations\n",
-    "movie_ids = data['movieId'].unique()  # Liste de tous les IDs de films disponibles\n",
+    "# Exemple : Recommandations pour un utilisateur\n",
+    "user_id = 1  # ID de l'utilisateur\n",
+    "movie_ids = data['movieId'].unique()  # Liste des films disponibles\n",
+    "movies_df = pd.read_csv('movies.csv')  # Charger le fichier movies.csv\n",
+    "valid_movie_ids = movies_df['movieId'].values  # IDs dans movies.csv\n",
     "\n",
-    "# Assuming movie_ids is a list or array of movie IDs\n",
-    "top_5_movies, top_5_ratings = top_5_recommandation(user_id, model, movie_ids, scaler)\n",
+    "# Obtenir les recommandations\n",
+    "top_5_movies, top_5_ratings = top_5_recommandation(user_id, model, movie_ids, valid_movie_ids, scaler)\n",
     "\n",
-    "nom_films = movies[movies['movieId'].isin(top_5_movies)]['title'].values\n",
+    "# Mapper les `movieId` recommandés aux titres\n",
+    "nom_movies = movies_df[movies_df['movieId'].isin(top_5_movies)]['title'].values\n",
     "\n",
-    "print(\"Top 5 Movies:\", nom_films)\n",
-    "print(\"Top 5 Ratings:\", top_5_ratings)"
+    "# Check if any titles were found\n",
+    "if len(nom_movies) == 0:\n",
+    "    nom_movies = [\"No matching titles found\"]\n",
+    "\n",
+    "# Afficher les résultats\n",
+    "print(\"Top 5 Movies (IDs):\", top_5_movies)\n",
+    "print(\"Top 5 Ratings:\", top_5_ratings)\n",
+    "print(\"Top 5 Movies (Titles):\", nom_movies)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m607/607\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n",
+      "\u001b[1m607/607\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step\n",
+      "Precision: 0.5189518787079763\n",
+      "Recall: 0.6262304862284975\n",
+      "RMSE: 0.30809455379201206\n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluer le modele \n",
+    "from sklearn.metrics import precision_score, recall_score, mean_squared_error # type: ignore\n",
+    "import numpy as np # type: ignore\n",
+    "\n",
+    "# Fonction pour évaluer la précision et le rappel\n",
+    "def evaluate_model(model, x_test, y_test, threshold=0.5):\n",
+    "    predictions = model.predict(x_test)\n",
+    "    predictions = predictions.flatten()\n",
+    "    y_pred = (predictions > threshold).astype(int)\n",
+    "    y_true = (y_test > threshold).astype(int)\n",
+    "    \n",
+    "    precision = precision_score(y_true, y_pred)\n",
+    "    recall = recall_score(y_true, y_pred)\n",
+    "    \n",
+    "    return precision, recall\n",
+    "\n",
+    "# Fonction pour calculer le RMSE\n",
+    "def calculate_rmse(model, x_test, y_test):\n",
+    "    predictions = model.predict(x_test)\n",
+    "    predictions = predictions.flatten()\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, predictions))\n",
+    "    \n",
+    "    return rmse\n",
+    "\n",
+    "# Évaluer le modèle\n",
+    "precision, recall = evaluate_model(model, [x_test['userId'], x_test['movieId']], y_test)\n",
+    "rmse = calculate_rmse(model, [x_test['userId'], x_test['movieId']], y_test)\n",
+    "\n",
+    "print(f\"Precision: {precision}\")\n",
+    "print(f\"Recall: {recall}\")\n",
+    "print(f\"RMSE: {rmse}\") #"
    ]
   }
  ],
