--- a/modele_NCF.ipynb
+++ b/modele_NCF.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -159,14 +159,14 @@
     "tags['tag'] = tags['tag'].fillna('')\n",
     "\n",
     "#concatener les tags\n",
-    "movies_with_links = pd.merge(movies, links, on='movieId', how='left')\n",
-    "movie_tags = tags.groupby('movieId')['tag'].apply(lambda x: ' '.join(x)).reset_index()\n",
+    "movies_with_links = pd.merge(movies, links, on='movieId', how='left')  #merge le dasaset movies et links\n",
+    "movie_tags = tags.groupby('movieId')['tag'].apply(lambda x: ' '.join(x)).reset_index() #groupby le dataset tags par movieId et concatener les tags\n",
     "\n",
     "# merger les dataframes movies_with_links et movie_tags\n",
-    "movies_with_ratings = pd.merge(movies_with_links, ratings, on='movieId', how='left')\n",
+    "movies_with_ratings = pd.merge(movies_with_links, ratings, on='movieId', how='left') #merge le dataset movies_with_links et ratings\n",
     "\n",
     "# Calculer la moyenne des ratings\n",
-    "mean_ratings = movies_with_ratings.groupby('movieId')['rating'].mean().reset_index()\n",
+    "mean_ratings = movies_with_ratings.groupby('movieId')['rating'].mean().reset_index() #groupby le dataset movies_with_ratings par movieId et calculer la moyenne des ratings\n",
     "\n",
     "# merger les dataframes\n",
     "data = pd.merge(movies_with_links, movie_tags, on='movieId', how='left')\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
    "source": [
     "#=================mapping pour le modele NCF=========================\n",
     "#mapping des userId\n",
-    "user_id_mapping = {id:i for i, id in enumerate(data['userId'].unique())}\n",
+    "user_id_mapping = {id:i for i, id in enumerate(data['userId'].unique())} #créer un dictionnaire avec les userId et leur index\n",
     "data['userId'] = data['userId'].map(user_id_mapping)\n",
     "#mapping des movieId\n",
     "movie_id_mapping = {id:i for i, id in enumerate(data['movieId'].unique())}\n",
@@ -411,23 +411,23 @@
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=42)\n",
     "\n",
     "# Construction du modèle\n",
-    "user_input = Input(shape=(1,))\n",
-    "movie_input = Input(shape=(1,))\n",
+    "user_input = Input(shape=(1,)) #créer une couche d'entrée pour les userId\n",
+    "movie_input = Input(shape=(1,)) #créer une couche d'entrée pour les movieId\n",
     "\n",
-    "user_embedding = Embedding(len(user_id_mapping), 32)(user_input)\n",
-    "movie_embedding = Embedding(len(movie_id_mapping), 32)(movie_input)\n",
+    "user_embedding = Embedding(len(user_id_mapping), 32)(user_input) #créer une couche d'embedding pour les userId avec 32 neurones\n",
+    "movie_embedding = Embedding(len(movie_id_mapping), 32)(movie_input) #créer une couche d'embedding pour les movieId avec 32 neurones\n",
     "\n",
-    "user_flatten = Flatten()(user_embedding)\n",
-    "movie_flatten = Flatten()(movie_embedding)\n",
+    "user_flatten = Flatten()(user_embedding) #applatir la couche d'embedding des userId\n",
+    "movie_flatten = Flatten()(movie_embedding) #applatir la couche d'embedding des movieId\n",
     "\n",
-    "conc = Concatenate()([user_flatten, movie_flatten])\n",
+    "conc = Concatenate()([user_flatten, movie_flatten]) #concaténer les couches d'embedding\n",
     "\n",
-    "dense = Dense(128, activation='relu')(conc)\n",
+    "dense = Dense(128, activation='relu')(conc) #créer une couche dense de 128 neurones avec une fonction d'activation relu\n",
+    "dense = Dropout(0.5)(dense) #ajouter une couche de dropout avec un taux de 0.5 pour éviter le surapprentissage\n",
+    "dense = Dense(64, activation='relu')(dense) #créer une couche dense de 64 neurones avec une fonction d'activation relu\n",
     "dense = Dropout(0.5)(dense)\n",
-    "dense = Dense(64, activation='relu')(dense)\n",
-    "dense = Dropout(0.5)(dense)\n",
-    "dense = Dense(32, activation='relu')(dense)\n",
-    "sortie = Dense(1, activation='sigmoid')(dense)  \n",
+    "dense = Dense(32, activation='relu')(dense) #créer une couche dense de 32 neurones avec une fonction d'activation relu\n",
+    "sortie = Dense(1, activation='sigmoid')(dense)  #créer une couche de sortie avec une fonction d'activation sigmoid\n",
     "\n",
     "model = Model(inputs=[user_input, movie_input], outputs=sortie)\n",
     "model.compile(optimizer=Adam(learning_rate=0.0001), loss='mean_squared_error')\n",
@@ -439,26 +439,8 @@
     "y_pred_normalized = model.predict([x_test['userId'], x_test['movieId']])\n",
     "y_pred = scaler.inverse_transform(y_pred_normalized)\n",
     "\n",
-    "# Calcul de la loss sur les notes originales\n",
-    "y_test_original = scaler.inverse_transform(y_test.values.reshape(-1, 1))\n",
-    "loss = mean_squared_error(y_test_original, y_pred)\n",
-    "print(\"Loss sur les notes originales :\", loss)"
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
